Rewrite Money Bags to use an Item Component